# kit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build.ps1  build.sh  chat_history.py  claudeguide.txt  config.py  install.sh  kit.py  providers.py  pyproject.toml
kit/: __init__.py  chat_history.py  main.py
