[project]
name = "kit"
version = "0.5.0"
description = "KI CLI Tool"
authors = [
    {name = "jonas"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pyinstaller (>=6.16.0,<7.0.0)",
    "openai (>=2.6.0,<3.0.0)",
    "rich (>=14.2.0,<15.0.0)",
    "pyperclip (>=1.11.0,<2.0.0)",
    "prompt-toolkit (>=3.0.52,<4.0.0)"
]
