[project]
name = "kit"
version = "0.9.1"
description = "KIterminal — Schlankes KI-CLI-Tool mit Multi-Provider-Support (Anthropic + DeepSeek). Live-Streaming, Pipe-Support, Clipboard."
authors = [
    {name = "JLI-Software"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "anthropic (>=0.83.0,<1.0.0)",
    "rich (>=14.2.0,<16.0.0)",
    "pyperclip (>=1.11.0,<2.0.0)",
    "prompt-toolkit (>=3.0.52,<4.0.0)",
]

[project.scripts]
kit = "kit:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pyinstaller (>=6.16.0,<7.0.0)",
]
